# UAV-LeaderFollower

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: ign_world_launch.py  two_ign_world_launch.py
models/r1/: my_drone.sdf
models/r2/: model.config  my_drone.sdf
rviz/: one_drone.rviz  two_drones.rviz
scripts/: quadrotor_controller.py  quadrotor_controller_k_tf.py  quadrotor_controller_paths_urdf.py  simple_movement.py  the_simplest_demo.py  two_quadrotors_lf.py
src/: quadrotor_controller.cpp  quadrotor_controller_k_tf.cpp  quadrotor_controller_paths_urdf.cpp  simple_movement.cpp  simple_movement2.cpp  the_simplest_demo.cpp  two_quadrotors_lf.cpp  two_quadrotors_paths.cpp
urdf/: r1.xacro  r2.xacro
worlds/: my_custom_world.sdf  two_quadrotors_world.sdf
